storage/perfschema/table_events_waits.cc
@@ -118,7 +118,7 @@ table_events_waits_current::m_field_def=
 PFS_engine_table_share
 table_events_waits_current::m_share=
 {
-  { C_STRING_WITH_LEN("EVENTS_WAITS_CURRENT") },
+  { C_STRING_WITH_LEN("events_waits_current") },
   &pfs_truncatable_acl,
   &table_events_waits_current::create,
   NULL, /* write_row */
@@ -135,7 +135,7 @@ THR_LOCK table_events_waits_history::m_table_lock;
 PFS_engine_table_share
 table_events_waits_history::m_share=
 {
-  { C_STRING_WITH_LEN("EVENTS_WAITS_HISTORY") },
+  { C_STRING_WITH_LEN("events_waits_history") },
   &pfs_truncatable_acl,
   &table_events_waits_history::create,
   NULL, /* write_row */
@@ -152,7 +152,7 @@ THR_LOCK table_events_waits_history_long::m_table_lock;
 PFS_engine_table_share
 table_events_waits_history_long::m_share=
 {
-  { C_STRING_WITH_LEN("EVENTS_WAITS_HISTORY_LONG") },
+  { C_STRING_WITH_LEN("events_waits_history_long") },
   &pfs_truncatable_acl,
   &table_events_waits_history_long::create,
   NULL, /* write_row */
