storage/perfschema/table_events_waits_summary.cc
@@ -74,7 +74,7 @@ table_events_waits_summary_by_thread_by_event_name::m_field_def=
 PFS_engine_table_share
 table_events_waits_summary_by_thread_by_event_name::m_share=
 {
-  { C_STRING_WITH_LEN("EVENTS_WAITS_SUMMARY_BY_THREAD_BY_EVENT_NAME") },
+  { C_STRING_WITH_LEN("events_waits_summary_by_thread_by_event_name") },
   &pfs_truncatable_acl,
   &table_events_waits_summary_by_thread_by_event_name::create,
   NULL, /* write_row */
@@ -386,7 +386,7 @@ table_events_waits_summary_by_instance::m_field_def=
 PFS_engine_table_share
 table_events_waits_summary_by_instance::m_share=
 {
-  { C_STRING_WITH_LEN("EVENTS_WAITS_SUMMARY_BY_INSTANCE") },
+  { C_STRING_WITH_LEN("events_waits_summary_by_instance") },
   &pfs_truncatable_acl,
   &table_events_waits_summary_by_instance::create,
   NULL, /* write_row */
